Remove DLQ configuration from queue declarations, added to rabbitmq startup.